# muse

./: LICENSE  README.md  pyproject.toml
muse/cli/: main.py
muse/config/: default.toml
muse/daemon/: daemon.py  ipc.py  state.py
muse/models/: config.py  playlist.py  queue.py  track.py
muse/playback/: mpv_controller.py
muse/providers/: cache.py  local.py  youtube.py
muse/utils/: fuzzy.py  logging.py  metadata.py  paths.py
